@@ -13,13 +13,17 @@
 
 This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details. 
 
-You should have received a copy of the GNU General Public License along with this program; if not, write to the Free Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA</property>
+You should have received a copy of the GNU General Public License along with this program; if not, write to the Free Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+
+2D Models:
+Copyright World Wide Web Consortium, (Massachusetts Institute of Technology, Institut National de Recherche en Informatique et en Automatique, Keio University). All Rights Reserved. http://www.w3.org/Consortium/Legal/
+</property>
   <property name="wrap_license">True</property>
   <property name="website">http://glchess.sourceforge.net</property>
   <property name="website_label" translatable="yes">glChess homepage</property>
   <property name="authors">Robert Ancell &lt;bob27@users.sourceforge.net&gt;</property>
   <property name="artists">John-Paul Gignac (3D Models)
-Thomas Dybdahl Ahle (2D Models)</property>
+Max Froumentin (2D Models)</property>
   <property name="translator_credits">Luca Marturana &lt;lucamarturana@gmail.com&gt; (It)
 Hakan Bekdas &lt;hakanbekdas@yahoo.com&gt; (tr)
 Many translators on launchpad.net.
